--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev":""
+    "dev": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/sso0711/instagram-clone/issues"
   },
-  "homepage": "https://github.com/sso0711/instagram-clone#readme"
+  "homepage": "https://github.com/sso0711/instagram-clone#readme",
+  "dependencies": {
+    "apollo-server": "^2.24.0",
+    "graphql": "^15.5.0"
+  }
 }
